--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body {
 	padding: 0;
 	width: 100%;
 	font-family: 'Montserrat', sans-serif;
+	color: var(--black);
 }
 
 p,
@@ -75,7 +76,7 @@ svg {
 
 /* header start */
 .header {
-	margin: 26px 0 26px 0;
+	padding: 26px 0 26px 0;
 }
 
 .header .header-search input {
@@ -126,7 +127,7 @@ svg {
 	box-shadow: 1px 3px 6px 2px rgba(138, 138, 138, 0.25);
 	border-radius: 15px;
 	padding: 0 12px;
-	z-index: 10;
+	z-index: 100;
 }
 
 .header .header-language__box li {
@@ -169,30 +170,73 @@ svg {
 .first-products__category .two-product__content {
 	background-image: url(../images/product-category-bg2.svg);
 }
-.first-products__category .first-product__info h2{
+
+.first-products__category .first-product__info h2 {
 	line-height: 29px;
 }
+
 .first-products__category .first-product__info {
 	display: flex;
 	justify-content: space-between;
 	flex-direction: column;
 	height: 100%;
 }
+
 .first-products__category .three-product__content {
 	background-image: url(../images/product-category-bg3.svg);
 }
-.first-product__box{
+
+.first-product__box {
 	width: 100%;
 	height: 100%;
 }
-.first-product__box .three-product__content-img2{
+
+.first-product__box .three-product__content-img2 {
 	z-index: 10;
 	top: 62px;
 	left: -15px;
 }
+
 .first-product__box .three-product__content-img1 {
 	z-index: 10;
 	top: 0;
 	left: 0;
 }
+
 /* first product categorystart */
+
+/* sorting-bar start */
+.sorting-bar {
+	margin: 64px 0 85px 0;
+}
+
+.sorting-bar .sorting-bar__content {
+	background: var(--red);
+	border-radius: 15px;
+	padding: 12px 8px;
+}
+
+.sorting-bar .sorting-bar__link {
+	padding: 8px 16px;
+	margin: 0 7px;
+	border-radius: 15px;
+}
+
+.sorting-bar .sorting-bar__link:hover {
+	background: #fff;
+	color: var(--black);
+}
+
+.sorting-bar .sorting-active {
+	background: #fff;
+	color: var(--black);
+}
+
+.sorting-bar .select-box,
+.sorting-bar .setting-box {
+	border: 1px solid #FFFFFF;
+	border-radius: 15px;
+	padding: 8px 16px;
+}
+
+/* sorting-bar end */
