--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,10 @@ svg {
 	display: block !important;
 }
 
+.title .title-text {
+	line-height: 29px;
+}
+
 /* header start */
 .header {
 	padding: 26px 0 26px 0;
@@ -240,3 +244,64 @@ svg {
 }
 
 /* sorting-bar end */
+
+/* product-slider start */
+.product-slider .product-slider__box .discount-box {
+	/* width: 100px; */
+	padding: 6px;
+	left: 8px;
+	top: 8px;
+	background: #00AE63;
+	border-radius: 15px;
+	z-index: 1;
+	white-space: nowrap;
+}
+
+.product-slider .product-slider__box .fast-delivery__box {
+	right: 0;
+	bottom: 52px;
+	background: #FFC11E;
+	border-radius: 15px 15px 15px 0px;
+	z-index: 1;
+	padding: 8px;
+}
+
+.product-slider .discount-box span,
+.product-slider .fast-delivery__box span {
+	margin-left: 7px;
+	color: white;
+}
+
+.product-slider .product-slider__box-img img {
+	width: 100%;
+}
+
+.product-slider .product-slider__icon-price {
+	gap: 4px;
+}
+
+.product-slider .swiper-horizontal>.swiper-pagination-bullets,
+.swiper-pagination-bullets.swiper-pagination-horizontal,
+.swiper-pagination-custom,
+.swiper-pagination-fraction {
+	bottom: auto;
+	top: 10px;
+	right: 10px;
+	left: auto;
+	width: auto;
+}
+
+.product-slider .swiper-pagination-bullet {
+	background: rgba(255, 76, 52, 0.5);
+	border-radius: 7px;
+	opacity: 1;
+}
+
+.product-slider .swiper-pagination-bullet-active {
+	width: 32px;
+	height: 6px;
+	background: #FF4C34;
+	border-radius: 7px;
+}
+
+/* product-slider end */
